=========
Changelog
=========

This file keeps track of all notable changes to the Slurm Charms.

Unreleased
----------

- add Fluentbit relation to forward logs from all the Slurm Charms

0.8.0 - 2021-09-13
------------------

- fix slurmd crashing when etcd in slurmctld is down/not-started/unreachable
- allow installing Slurm from different repositories on Ubuntu
- use Omnivector's PPA for installing Slurm on Ubuntu

0.7.0 - 2021-08-09
------------------

- fix: reduce number of events when a slurmd unit is added/removed
- fix #111: install bullseye gpg keys from files
- add support for Ubuntu partitions on CentOS deploys
- add influxdb-info action to slurmctld
- add grafana relation for slurmctld
- add influxdb relation for accouting and profiling of jobs with the SLURM
  InfluxDB plugin
- add acct gather configuration options
- handle update-status hook to constantly give feedback about charms' status
- add .jujuignore to reduce size of final charm files
- fix cache of partition_name in slurmd charm
- improve description of charm's state in juju status
- fix race condition on relation data exchange between slurmctld and slurmdbd
- change default partition name from juju-compute-random to osd-appname
- fix slurmctld crashing when removing a slurmd application

0.6.6 - 2021-07-01
------------------

- fix checks for munge when the code can't run subprocess as another UID

0.6.5 - 2021-06-28
------------------

- fix race condition on inventory synchronization between slurmd and slurmctld
  before starting slurmd
- fix breakage in charms when the slurmd leader is removed
- remove unused code in slurmd peer relation
- fix slurmd action to query infiniband version
- add slurmrestd to CentOS7
- fix slurmrestd Systemd environment variables to enable jwt auth

0.6.4 - 2021-06-11
------------------

- improve checks on Systemd commands to start/restart daemons, as to guarantee
  correct Charm initialization