@@ -1,5 +1,5 @@
 ops
 influxdb
 etcd3gw==1.0.0
-git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.7.0
+git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.7.1
 git+https://github.com/omnivector-solutions/interface-nrpe-external-master.git@master
