@@ -1,3 +1,3 @@
 ops
-git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.7.0
+git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.7.1
 git+https://github.com/omnivector-solutions/interface-nrpe-external-master.git@master
