@@ -1,2 +1,2 @@
 ops
-git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.7.0
+git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.7.1
