@@ -7,6 +7,7 @@ This file keeps track of all notable changes to the Slurm Charms.
 Unreleased
 ----------
 
+- use Omnivector Solutions' RPM repository to install Slurm
 - add Fluentbit relation to forward logs from all the Slurm Charms
 
 0.8.0 - 2021-09-13
